<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewContact"
        android:orientation="vertical" android:background="@color/colorPrimaryLight">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName" android:textAlignment="center" android:gravity="center_horizontal"
            android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp"
            android:hint="@string/please_enter_your_name" android:importantForAutofill="no"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etPhone" android:textAlignment="center" android:gravity="center_horizontal"
            android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp"
            android:hint="@string/please_enter_your_number" android:importantForAutofill="no"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etWeb" android:textAlignment="center" android:gravity="center_horizontal"
            android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp"
            android:hint="@string/please_enter_your_website" android:importantForAutofill="no"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etLoc" android:textAlignment="center" android:gravity="center_horizontal"
            android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp"
            android:hint="@string/please_enter_location" android:importantForAutofill="no"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" app:srcCompat="@drawable/happy" android:id="@+id/ivHappy"
                android:contentDescription="@string/happy_face"
                android:layout_weight="1" android:clickable="true"/>
        <ImageView
                android:layout_width="50dp"
                android:contentDescription="@string/neutral_face"
                android:layout_height="50dp" app:srcCompat="@drawable/neutral" android:id="@+id/ivNeutral"
                android:layout_weight="1" android:clickable="true"/>
        <ImageView
                android:layout_width="50dp"
                android:contentDescription="@string/sad_face"
                android:layout_height="50dp" app:srcCompat="@drawable/sad" android:id="@+id/ivSad"
                android:layout_weight="1" android:clickable="true"/>
    </LinearLayout>
</LinearLayout>