<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity" android:background="@color/colorPrimaryLight">
    <TextView
            android:text="@string/contacts_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView" android:textStyle="bold"
            android:textSize="18sp" android:textAlignment="center" android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" android:layout_marginRight="20dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tvName" android:textStyle="bold"
            android:textAlignment="center" android:textSize="18sp" android:gravity="center_horizontal"
            android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp"
            android:visibility="gone"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/happy" android:id="@+id/ivFace"
            android:visibility="gone" android:contentDescription="@string/associated_face"
            android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp" android:clickable="true"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/phone" android:id="@+id/ivPhone"
            android:contentDescription="@string/phone_contact"
            android:visibility="gone" android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
            android:clickable="true"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/web" android:id="@+id/ivWeb"
            android:contentDescription="@string/go_to_contact_webpage"
            android:visibility="gone" android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
            android:clickable="true"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/location" android:id="@+id/ivLoc"
            android:contentDescription="@string/go_to_contact_location"
            android:visibility="gone" android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
            android:clickable="true"/>
    <Button
            android:text="@string/create_new_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnCreateNew" android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" android:layout_marginRight="20dp" android:background="@color/colorPrimary"
            android:textColor="#FFFFFF" android:textStyle="bold"/>
</LinearLayout>